--- a/index.html
+++ b/index.html
@@ -33,24 +33,31 @@
   });
 
   /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
-  L.tileLayer(
-    'https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
-      attribution: '&copy; <a href="https://osm.org/copyright">\
-        OpenStreetMap</a> contributors, &copy;\
-        <a href="https://carto.com/attribution">CARTO</a>'
-  }).addTo(map);
+  var CartoDB_VoyagerLabelsUnder = L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager_labels_under/{z}/{x}/{y}{r}.png', {
+	attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+	subdomains: 'abcd',
+	maxZoom: 20}).addTo(map);
 
   /* Display a point marker with pop-up text */
   L.marker([35.7847, -78.6821]).addTo(map) // EDIT marker coordinates
   .bindPopup("NC State University"); // EDIT pop-up text message
 
-    /* Display a point marker with pop-up text */
-    L.marker([35.7822573,-78.6778459]).addTo(map) // EDIT marker coordinates
+  /* Display a point marker with pop-up text */
+  L.marker([35.7822573,-78.6778459]).addTo(map) // EDIT marker coordinates
   .bindPopup("Biltmore Hall"); // EDIT pop-up text message
 
-    /* Display a point marker with pop-up text */
-    L.marker([35.7817009,-78.6763232]).addTo(map) // EDIT marker coordinates
+  /* Display a point marker with pop-up text */
+  L.marker([35.7817009,-78.6763232]).addTo(map) // EDIT marker coordinates
   .bindPopup("Jordan Hall"); // EDIT pop-up text message
+
+  /* Display a point marker with pop-up text */
+  L.marker([35.7834667,-78.6708137]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Talley Student Union"); // EDIT pop-up text message
+     
+  /* Display a point marker with pop-up text */
+  L.marker([35.7868074,-78.6703323]).addTo(map) // EDIT marker coordinates
+  .bindPopup("North Campus Brick Yard"); // EDIT pop-up text message
+  
 
   </script>
 </body>
